fe responsive UI & stripe module

--- a/be/package.json
+++ b/be/package.json
@@ -30,7 +30,8 @@
     "graphql": "^16.10.0",
     "mongoose": "^8.9.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
